--- a/index.html
+++ b/index.html
@@ -386,3 +386,266 @@
             <h2>Technical Skills</h2>
 
             <div class="skill-category">
+                <h3>Digital Electronics and Embedded Systems</h3>
+                <div class="skills-grid">
+                    <div class="skill-item"><img src="statics/FPGA.JPG" class="skill-icon" alt="FPGA"><span class="skill-name">VHDL/Verilog</span></div>
+                    <div class="skill-item"><img src="statics/Cadence.png" class="skill-icon" alt="Cadence"><span class="skill-name">Virtuoso</span></div>
+                    <div class="skill-item"><img src="statics/HSPICE.jfif" class="skill-icon" alt="HSPICE"><span class="skill-name">HSPICE</span></div>
+                    <div class="skill-item"><img src="statics/Altium.png" class="skill-icon" alt="Altium"><span class="skill-name">Altium Designer</span></div>
+                    <div class="skill-item"><img src="statics/arm.svg" class="skill-icon" alt="ARM"><span class="skill-name">STM32/AT91</span></div>
+                    <div class="skill-item"><img src="statics/8bitmcu.png" class="skill-icon" alt="AVR"><span class="skill-name">AVR/STM8</span></div>
+                    <div class="skill-item"><img src="statics/Vivado.jpg" class="skill-icon" alt="Vivado"><span class="skill-name">Xilinx Vivado</span></div>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3>Programming</h3>
+                <div class="skills-grid">
+                    <div class="skill-item"><img src="statics/python.png" class="skill-icon" alt="Python"><span class="skill-name">Python</span></div>
+                    <div class="skill-item"><img src="statics/C.JPG" class="skill-icon" alt="C++"><span class="skill-name">C / C++</span></div>
+                    <div class="skill-item"><img src="statics/matlab.png" class="skill-icon" alt="MATLAB"><span class="skill-name">MATLAB</span></div>
+                    <div class="skill-item"><img src="statics/LaTeX.png" class="skill-icon" alt="LaTeX"><span class="skill-name">LaTeX</span></div>
+                    <div class="skill-item"><img src="statics/linux.png" class="skill-icon" alt="Linux"><span class="skill-name">Embedded Linux</span></div>
+                    <div class="skill-item"><img src="statics/qt.svg" class="skill-icon" alt="Qt"><span class="skill-name">Qt / PyQt</span></div>
+                    <div class="skill-item"><img src="statics/django.png" class="skill-icon" alt="Django"><span class="skill-name">Django</span></div>
+                    <div class="skill-item"><img src="statics/networkplus.png" class="skill-icon" alt="Network+"><span class="skill-name">Network+</span></div>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3>Communication Interfaces and Localization</h3>
+                <div class="skills-grid">
+                    <div class="skill-item"><img src="statics/BLE.png" class="skill-icon" alt="BLE"><span class="skill-name">BLE</span></div>
+                    <div class="skill-item"><img src="statics/wifi.png" class="skill-icon" alt="WiFi"><span class="skill-name">WiFi</span></div>
+                    <div class="skill-item"><img src="statics/UWB.png" class="skill-icon" alt="UWB"><span class="skill-name">UWB</span></div>
+                    <div class="skill-item"><img src="statics/HID.jpg" class="skill-icon" alt="HID"><span class="skill-name">USB HID</span></div>
+                    <div class="skill-item"><img src="statics/gps.svg" class="skill-icon" alt="GPS"><span class="skill-name">GPS/GNSS</span></div>
+                    <div class="skill-item"><img src="statics/LoRaWAN.png" class="skill-icon" alt="LoRaWAN"><span class="skill-name">LoRaWAN</span></div>
+                    <div class="skill-item"><img src="statics/RS485.jpg" class="skill-icon" alt="RS485"><span class="skill-name">RS232/RS485</span></div>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3>AI & Machine Learning</h3>
+                <div class="skills-grid">
+                    <div class="skill-item"><img src="statics/torch.png" class="skill-icon" alt="PyTorch"><span class="skill-name">PyTorch</span></div>
+                    <div class="skill-item"><img src="statics/tf.png" class="skill-icon" alt="TensorFlow"><span class="skill-name">TensorFlow</span></div>
+                    <div class="skill-item"><img src="statics/Scikit_learn.png" class="skill-icon" alt="Scikit"><span class="skill-name">Sci-kit Learn</span></div>
+                    <div class="skill-item"><img src="statics/OpenCV.png" class="skill-icon" alt="OpenCV"><span class="skill-name">OpenCV</span></div>
+                    <div class="skill-item"><img src="statics/keras.png" class="skill-icon" alt="Keras"><span class="skill-name">Keras</span></div>
+                    <div class="skill-item"><img src="statics/snntorch.png" class="skill-icon" alt="snnTorch"><span class="skill-name">snnTorch</span></div>
+                    <div class="skill-item"><img src="statics/Cuda.png" class="skill-icon" alt="CUDA"><span class="skill-name">CUDA</span></div>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3>CI/CD & Tools</h3>
+                <div class="skills-grid">
+                    <div class="skill-item"><img src="statics/markdown.png" class="skill-icon" alt="Markdown"><span class="skill-name">Markdown</span></div>
+                    <div class="skill-item"><img src="statics/Git.png" class="skill-icon" alt="Git"><span class="skill-name">Git</span></div>
+                    <div class="skill-item"><img src="statics/docker.png" class="skill-icon" alt="Docker"><span class="skill-name">Docker</span></div>
+                    <div class="skill-item"><img src="statics/Azure.png" class="skill-icon" alt="Azure"><span class="skill-name">Azure</span></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ACADEMIC EXPERIENCE -->
+        <section id="academic-exp">
+            <h2>Academic Experience</h2>
+
+            <!-- TAs -->
+            <h3 style="margin-bottom: 20px; color: var(--text-main);">Teaching Assistantships</h3>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-header">
+                    <h3><img src="statics/kntu.png" class="edu-logo-small" alt="KNTU">Deep Generative Models (DGM)</h3>
+                    <span class="timeline-date">KNTU — Spring 2025</span>
+                </div>
+                <p class="timeline-subtitle">Graduate Instructional Assistant for Dr. Behrooz Nasihatkon.</p>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-header">
+                    <h3><img src="statics/kntu.png" class="edu-logo-small" alt="KNTU">Deep Learning (DL)</h3>
+                    <span class="timeline-date">KNTU — Fall 2024</span>
+                </div>
+                <p class="timeline-subtitle">Graduate Instructional Assistant for Dr. Mahdi Aliyari-Shoorehdeli.</p>
+            </div>
+
+            <!-- Courses -->
+            <h3 style="margin-top: 40px; margin-bottom: 20px; color: var(--text-main);">Graded Graduate Coursework</h3>
+            <div class="course-grid">
+                <div class="course-item">
+                    <strong>VHDL</strong><span class="grade-badge">20 / 20</span>
+                    <div style="font-size: 0.85rem; color: #666;">SBU - Dr. Soheila Nazari</div>
+                </div>
+                <div class="course-item">
+                    <strong>ASIC / FPGA Design</strong><span class="grade-badge">19.93 / 20</span>
+                    <div style="font-size: 0.85rem; color: #666;">SBU - Dr. Soheila Nazari</div>
+                </div>
+                <div class="course-item">
+                    <strong>Neural Networks</strong><span class="grade-badge">19.75 / 20</span>
+                    <div style="font-size: 0.85rem; color: #666;">SBU - Dr. Reza Ghaderi</div>
+                </div>
+                <div class="course-item">
+                    <strong>VLSI</strong><span class="grade-badge">19.50 / 20</span>
+                    <div style="font-size: 0.85rem; color: #666;">SBU - Dr. M. Moaiyeri</div>
+                </div>
+                <div class="course-item">
+                    <strong>Advanced VLSI</strong><span class="grade-badge">18.50 / 20</span>
+                    <div style="font-size: 0.85rem; color: #666;">SBU - Dr. M. Moaiyeri</div>
+                </div>
+                <div class="course-item">
+                    <strong>Deep Learning</strong><span class="grade-badge">15.50 / 20</span>
+                    <div style="font-size: 0.85rem; color: #666;">SBU - Dr. Reza Ghaderi</div>
+                </div>
+            </div>
+
+            <!-- Audits -->
+            <h3 style="margin-top: 40px; margin-bottom: 20px; color: var(--text-main);">Audit & Extra Courses</h3>
+            <div class="course-grid">
+                <div class="course-item audit">
+                    <strong>Probabilistic Graphical Models</strong>
+                    <div style="font-size: 0.85rem; color: #666;">KNTU - Dr. Behrooz Nasihatkon (Audit)</div>
+                </div>
+                <div class="course-item audit">
+                    <strong>Advanced Math for ML</strong>
+                    <div style="font-size: 0.85rem; color: #666;">KNTU - Dr. Behrooz Nasihatkon (Audit)</div>
+                </div>
+                <div class="course-item audit">
+                    <strong>Deep Generative Models</strong>
+                    <div style="font-size: 0.85rem; color: #666;">Stanford - Dr. Stefano Ermon (Extra)</div>
+                </div>
+            </div>
+        </section>
+
+        <!-- WORK EXPERIENCE -->
+        <section id="experience">
+            <h2>Work Experience</h2>
+
+            <!-- Job 1 -->
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-header">
+                    <h3>Embedded Hardware Developer</h3>
+                    <span class="timeline-date">Jan 2023 - Jan 2025</span>
+                </div>
+                <span class="timeline-subtitle">Farapayesh Amin Co. (CoolTag) — Tehran, Iran</span>
+                <p>Led the hardware team in researching and developing IoT-based industrial monitoring systems and offline data loggers, while ensuring operational maintenance of ERP platforms.</p>
+                <div class="timeline-content">
+                    <ul>
+                        <li><strong>CoolTag Easy:</strong> Developed firmware (Silicon-Labs SB1 MCU) and web-app (Django) for a portable NFC temperature data-logger. <a href="https://www.cooltag.ir/products/offline/cooltagbasic/" target="_blank" style="color: var(--accent);">[View Product]</a></li>
+                        <li><strong>BLE Indoor Positioning:</strong> Designed algorithms and server-side implementation (Python, ThingsBoard) for a LoRaWAN tracker system using BLE beacons.</li>
+                        <li><strong>Fully Automated Delivery System:</strong> Architected a unified system (ERPNext, Python, SQL, MATLAB) reducing processing time from 3 months to 1 week for batches of 1,000 products.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Job 2 -->
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-header">
+                    <h3>Senior Member of Industrial Control Lab</h3>
+                    <span class="timeline-date">Nov 2019 - Nov 2021</span>
+                </div>
+                <span class="timeline-subtitle">Shahid Chamran University — Ahvaz, Iran</span>
+                <div class="timeline-content">
+                    <ul>
+                        <li><strong>Quad-Rotor Flight Controller:</strong> Circuit design and programming (Arduino Mega) utilizing GPS/IMU positioning and Barometric Altimeter.</li>
+                        <li><strong>PC-Controlled DC Motor:</strong> Implemented PID speed control on AVR MCU with a Java-based GUI for Windows/Linux.</li>
+                        <li><strong>BLDC Motor Controller:</strong> Designed MOSFET drive stages controlled by AVR, simulated in Proteus and MATLAB.</li>
+                        <li><strong>Elevator Control System:</strong> Prototyped using Siemens S7-300 PLC with magnetic proximity sensors.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Job 3 -->
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-header">
+                    <h3>Electronic Specialist</h3>
+                    <span class="timeline-date">May 2017 - May 2020</span>
+                </div>
+                <span class="timeline-subtitle">Ahwaz Robotic Home — Ahvaz, Iran</span>
+                <p>Maintained robotic education platforms and developed training programs incorporating cutting-edge technologies.</p>
+                <div class="timeline-content">
+                    <ul>
+                        <li><strong>Line Follower Robots (8 & 14 Sensors):</strong> Designed PCB/Frame (Altium, SolidWorks) and programmed MCU algorithms (Arduino Uno/Mega).</li>
+                        <li><strong>Smart Home IoT System:</strong> Developed ESP8266-based appliance control via WiFi and Telegram Bot.</li>
+                        <li><strong>Security System:</strong> Built an Arduino-based entrance control system using Password and NFC authentication.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- HONORS -->
+        <section id="honors">
+            <h2>Honors & Awards</h2>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-header">
+                    <h3>Eligible for Iranian National Talent Program</h3>
+                    <span class="timeline-date">Sep 2025</span>
+                </div>
+                <span class="timeline-subtitle">Qualifying with a substantial score.</span>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-header">
+                    <h3>Ranked Among Top 1% in National University Entrance Exam</h3>
+                    <span class="timeline-date">Sep 2017 & 2022</span>
+                </div>
+                <span class="timeline-subtitle">Achieved top ranking in both B.Sc. and M.Sc. entrance exams.</span>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-header">
+                    <h3>Among Top 3 Projects in the B.Sc. Program</h3>
+                    <span class="timeline-date">Jan 2022</span>
+                </div>
+                <span class="timeline-subtitle">Recognized for project excellence at SCU.</span>
+            </div>
+        </section>
+
+        <!-- LANGUAGES -->
+        <section id="languages">
+            <h2>Languages</h2>
+            <div class="course-grid" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
+                <div class="course-item" style="border-left-color: var(--accent);">
+                    <strong>English</strong>
+                    <div style="color: #666;">Fluent</div>
+                </div>
+                <div class="course-item" style="border-left-color: var(--accent);">
+                    <strong>Persian</strong>
+                    <div style="color: #666;">Native</div>
+                </div>
+            </div>
+        </section>
+
+        <!-- BIO -->
+        <section id="bio">
+            <h2>Professional Bio</h2>
+            <div class="card" style="line-height: 1.9;">
+                <p>Majid Farajian, born in 1999 in Ahvaz, Iran, is a digital electronic engineer with strong experience in embedded systems, AI-focused hardware design, and indoor localization technologies. He earned his B.Sc. in Electrical Engineering-Electronics from Shahid Chamran University of Ahvaz and his M.Sc. in Digital Electronic Engineering from Shahid Beheshti University, graduating with high distinction. His master's thesis focused on object detection using spiking neural networks for automotive applications.</p>
+                <p>Majid has over a decade of hands-on R&D experience in electronic circuit design, firmware development, IoT systems, and positioning technologies. He previously worked as a Senior Embedded Developer at CoolTag Company, contributing to indoor positioning algorithms and unified IoT frameworks. He also serves as a Graduate Instructional Assistant for advanced AI and deep learning courses at Khajeh Nasir Toosi University of Technology (KNTU). His current interests include neuromorphic hardware, memory design, in-memory computing, long-range wireless networks, and practical machine learning for real-world devices.</p>
+            </div>
+        </section>
+
+        <!-- CONTACT -->
+        <section id="contact">
+            <h2>Contact</h2>
+            <div class="contact-links">
+                <p><strong>Email:</strong> <a href="mailto:majidfa78@gmail.com">majidfa78@gmail.com</a></p>
+                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/majid-farajian-899a47297" target="_blank">View Profile</a></p>
+                <p><strong>GitHub:</strong> <a href="https://github.com/majidfa78" target="_blank">github.com/majidfa78</a></p>
+            </div>
+        </section>
+
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Majid Farajian. Hosted on GitHub Pages.</p>
+    </footer>
+
+</body>
+</html>
