--- a/index.html
+++ b/index.html
@@ -451,6 +451,13 @@
             </p>
             <!-- Header Button -->
             <a href="#contact" class="cta-button">Get in Touch</a>
+            <a
+                href="https://drive.google.com/file/d/1JKSal7pITUwyrJ_Xk2QhCnDDn4_Jojg9/view?usp=drive_link"
+                download
+                class="bg-white/20 hover:bg-white/30 px-8 py-3 rounded-full border border-white shadow-lg backdrop-blur transition"
+            >
+                Academic CV
+            </a>
         </div>
         <img src="statics/profile.jpg" alt="Majid Farajian" class="profile-img">
     </header>
@@ -509,7 +516,7 @@
                     <h3>Research Focus</h3>
                     <ul style="list-style: disc; padding-left: 20px; line-height: 1.8;">
                         <li><strong>Hardware & Memory:</strong> Memory Design, In-Memory Computing, Neuromorphic Hardware.</li>
-                        <li><strong>AI Systems:</strong> Large Language Models (LLMs), Spiking Neural Networks (SNNs).</li>
+                        <li><strong>AI Systems:</strong> Large Language Models (LLMs), Deep Neural Networks.</li>
                         <li><strong>Wireless & IoT:</strong> Indoor Localization, Long-Range Wireless Networks.</li>
                         <li><strong>Applications:</strong> Healthcare Devices, Industrial IoT Frameworks.</li>
                     </ul>
@@ -537,8 +544,8 @@
                     <div class="skill-item"><img src="statics/Cadence.png" class="skill-icon" alt="Cadence"><span class="skill-name">Virtuoso</span></div>
                     <div class="skill-item"><img src="statics/HSPICE.jfif" class="skill-icon" alt="HSPICE"><span class="skill-name">HSPICE</span></div>
                     <div class="skill-item"><img src="statics/Altium.png" class="skill-icon" alt="Altium"><span class="skill-name">Altium Designer</span></div>
-                    <div class="skill-item"><img src="statics/arm.svg" class="skill-icon" alt="ARM"><span class="skill-name">STM32/AT91</span></div>
-                    <div class="skill-item"><img src="statics/8bitmcu.png" class="skill-icon" alt="AVR"><span class="skill-name">AVR/STM8</span></div>
+                    <div class="skill-item"><img src="statics/arm.svg" class="skill-icon" alt="ARM"><span class="skill-name">STM32/AT91/LPC17xx</span></div>
+                    <div class="skill-item"><img src="statics/8bitmcu.png" class="skill-icon" alt="AVR"><span class="skill-name">AVR/STM8/SIlabs EFM8</span></div>
                     <div class="skill-item"><img src="statics/Vivado.jpg" class="skill-icon" alt="Vivado"><span class="skill-name">Xilinx Vivado</span></div>
                 </div>
             </div>
@@ -590,6 +597,8 @@
                     <div class="skill-item"><img src="statics/Git.png" class="skill-icon" alt="Git"><span class="skill-name">Git</span></div>
                     <div class="skill-item"><img src="statics/docker.png" class="skill-icon" alt="Docker"><span class="skill-name">Docker</span></div>
                     <div class="skill-item"><img src="statics/Azure.png" class="skill-icon" alt="Azure"><span class="skill-name">Azure</span></div>
+                    <div class="skill-item"><img src="statics/git1.png" class="skill-icon" alt="github"><span class="skill-name">GitHub</span></div>
+
                 </div>
             </div>
         </section>
