--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             position: relative;
             background: 
                 linear-gradient(135deg, rgba(15, 23, 42, 0.95) 0%, rgba(15, 23, 42, 0.85) 100%),
-                url('https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop');
+                url('https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&q=80&w=2070'); 
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
