--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
             <a
                 href="https://drive.google.com/file/d/1JKSal7pITUwyrJ_Xk2QhCnDDn4_Jojg9/view?usp=drive_link"
                 download
-                class="bg-white/20 hover:bg-white/30 px-8 py-3 rounded-full border border-white shadow-lg backdrop-blur transition"
+                class="cta-button"
             >
                 Academic CV
             </a>
