--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 <div class="timeline-header">
                     <h3>
                         <img src="statics/SBU.jpg" class="edu-logo-small" alt="SBU Logo">
-                        M.Sc. in Digital Electronics - Shahid Beheshti University
+                        M.Sc. in Digital Electronics - <a href="https://sbu.ac.ir"> Shahid Beheshti University </a>
                     </h3>
                     <span class="timeline-date">Sep 2022 - Oct 2025</span>
                 </div>
