--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             <!-- Header Button -->
             <a href="#contact" class="cta-button">Get in Touch</a>
             <a
-                href="https://drive.google.com/file/d/1JKSal7pITUwyrJ_Xk2QhCnDDn4_Jojg9/view?usp=drive_link"
+                href="https://drive.google.com/file/d/1lmszWn2RwrnRzG7g470N-74utxUaimsB/view?usp=sharing"
                 download
                 class="cta-button"
             >
@@ -481,7 +481,7 @@
                 <div class="timeline-header">
                     <h3>
                         <img src="statics/SBU.jpg" class="edu-logo-small" alt="SBU Logo">
-                        M.Sc. in Digital Electronics - <a href="https://sbu.ac.ir"> Shahid Beheshti University </a>
+                        M.Sc. in Digital Electronics - <a href="https://sbu.ac.ir/en"> Shahid Beheshti University </a>
                     </h3>
                     <span class="timeline-date">Sep 2022 - Oct 2025</span>
                 </div>
@@ -497,7 +497,7 @@
                 <div class="timeline-header">
                     <h3>
                         <img src="statics/SCU.jpg" class="edu-logo-small" alt="SCU Logo">
-                        B.Sc. in Electrical Engineering - Shahid Chamran University
+                        B.Sc. in Electrical Engineering - <a href="https://scu.ac.ir/en"> Shahid Chamran University of ahvaz</a> 
                     </h3>
                     <span class="timeline-date">Sep 2017 - Jan 2022</span>
                 </div>
