--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         .header-section {
             position: relative;
             background: 
-                linear-gradient(135deg, rgba(15, 23, 42, 0.75) 0%, rgba(15, 23, 42, 0.65) 100%),
+                linear-gradient(135deg, rgba(15, 23, 42, 0.65) 0%, rgba(15, 23, 42, 0.55) 100%),
                 url('https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&q=80&w=2070'); 
             background-size: cover;
             background-position: center;
@@ -545,7 +545,7 @@
                     <div class="skill-item"><img src="statics/HSPICE.jfif" class="skill-icon" alt="HSPICE"><span class="skill-name">HSPICE</span></div>
                     <div class="skill-item"><img src="statics/Altium.png" class="skill-icon" alt="Altium"><span class="skill-name">Altium Designer</span></div>
                     <div class="skill-item"><img src="statics/arm.svg" class="skill-icon" alt="ARM"><span class="skill-name">STM32/AT91/LPC17xx</span></div>
-                    <div class="skill-item"><img src="statics/8bitmcu.png" class="skill-icon" alt="AVR"><span class="skill-name">AVR/STM8/SIlabs EFM8</span></div>
+                    <div class="skill-item"><img src="statics/8bitmcu.png" class="skill-icon" alt="AVR"><span class="skill-name">AVR/STM8/EFM8</span></div>
                     <div class="skill-item"><img src="statics/Vivado.jpg" class="skill-icon" alt="Vivado"><span class="skill-name">Xilinx Vivado</span></div>
                 </div>
             </div>
